# ocaml-forensics

./: .ocamlformat  README.md  dune-project  ocaml-forensics.opam
examples/: dune  get_windows_version.ml  iterate_root_files.ml
lib/: dune  ewf.ml  forensics.ml  libewf_stubs.c  libregf_stubs.c  libtsk_stubs.c  registry.ml  tsk.ml
test/: dune
