(library
 (name forensics)
 (libraries core)
 (preprocess
  (pps ppx_jane))
 (foreign_stubs
  (language c)
  (names libewf_stubs libtsk_stubs libregf_stubs)
  (flags
   (:standard -I %{ocaml_where} -I/opt/homebrew/include -I/usr/local/include)))
 (c_library_flags
  (-L/opt/homebrew/lib -L/usr/local/lib -lewf -ltsk -lregf)))
